<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="tech.gim.scroble.ui.show.collections.PopularShowsViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.show.collections.PopularShowsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shows_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/minimized_show_card"
            tools:itemCount="12"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:spanCount="3"/>

    </FrameLayout>
</layout>